Replace platform thread with virtual thread where convenient